@@ -2,12 +2,14 @@ package net.library.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jayway.jsonpath.JsonPath;
+import net.library.config.security.SecurityConfig;
 import net.library.model.entity.*;
 import net.library.model.request.BookRequest;
 import net.library.repository.*;
 import net.library.repository.enums.BookAction;
 import net.library.repository.enums.BookItemStatus;
 import net.library.service.BookService;
+import net.library.service.UserService;
 import net.library.util.Utils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
@@ -15,34 +17,33 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.test.annotation.Rollback;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.Callable;
 
 import static net.library.tools.Tools.*;
 import static net.library.util.HttpUtil.*;
 import static net.library.util.Utils.getUUID;
 import static org.hamcrest.Matchers.*;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.httpBasic;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @ActiveProfiles("test")
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-
 @AutoConfigureMockMvc
 class BookControllerTest {
 
-    @Autowired
-    private JdbcTemplate jdbcTemplate;
     @Autowired
     private ObjectMapper objectMapper;
     @Autowired
@@ -61,13 +62,21 @@ class BookControllerTest {
     private BookGenresRepository bookGenresRepository;
     @Autowired
     private BookItemHistoryRepository bookItemHistoryRepository;
+    @Autowired
+    private UserService userService;
+
 
     @AfterEach
     void cleanAfter() {
-        bookService.removeAll();
+        bookItemHistoryRepository.deleteAll();
+        genreRepository.deleteAll();
+        bookGenresRepository.deleteAll();
+        bookItemRepository.deleteAll();
+        bookRepository.deleteAll();
         userRepository.deleteAll();
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookSuccess() throws Exception {
         final var title = "The Great Gatsby";
@@ -88,6 +97,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -103,6 +113,7 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.publication", is(publication)));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookSuccessDbCheck() throws Exception {
         final var title = "The Great Gatsby";
@@ -123,13 +134,15 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
+                        .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
                 .andExpect(status().isCreated());
 
         final var books = bookRepository.findAll();
-        final var book = books.get(0);
+        final var book = books.getFirst();
 
         assertEquals(1, books.size());
         assertEquals(title, book.getTitle());
@@ -141,6 +154,7 @@ class BookControllerTest {
         assertEquals(publication, book.getPublicationYear());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookTitleEmptyString() throws Exception {
         final var title = "";
@@ -161,6 +175,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -171,6 +186,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookTitleWithinMinLength() throws Exception {
         final var title = "1";
@@ -191,6 +207,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -198,6 +215,7 @@ class BookControllerTest {
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookTitleWithinMaxLength() throws Exception {
         final var title = "Thisisastringthatcontainsexactlyonehundredcharacterswithoutspacesandisnowexactlyonehundredlong123456";
@@ -218,6 +236,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -225,6 +244,7 @@ class BookControllerTest {
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookTitleExceedsMaxLengthError() throws Exception {
         final var title = "Thisisastringthatcontainsexactlyonehundredcharacterswithoutspacesandisnowexactlyonehundredlong1234561";
@@ -245,6 +265,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -258,6 +279,7 @@ class BookControllerTest {
         ;
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookTitleNullValue() throws Exception {
         final var author = "F. Scott Fitzgerald";
@@ -277,6 +299,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -287,6 +310,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookAuthorEmptyString() throws Exception {
         final var title = "The Great Gatsby";
@@ -307,6 +331,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -317,6 +342,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookAuthWithinMinLength() throws Exception {
         final var title = "1";
@@ -337,6 +363,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -344,6 +371,7 @@ class BookControllerTest {
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookAuthorWithinMaxLength() throws Exception {
         final var title = "1";
@@ -364,6 +392,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -371,6 +400,7 @@ class BookControllerTest {
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookAuthorExceedsMaxLengthError() throws Exception {
         final var title = "1";
@@ -391,6 +421,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -401,6 +432,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookDescriptionWithinMaxLength() throws Exception {
         final var title = "1";
@@ -421,6 +453,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -428,6 +461,7 @@ class BookControllerTest {
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookDescriptionExceedsMaxLengthError() throws Exception {
         final var title = "1";
@@ -448,6 +482,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -458,6 +493,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookAuthorNullValue() throws Exception {
         final var title = "The Great Gatsby";
@@ -477,6 +513,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -487,6 +524,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookPublisherEmptyString() throws Exception {
         final var title = "The Great Gatsby";
@@ -509,7 +547,8 @@ class BookControllerTest {
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
-                        .content(objectMapper.writeValueAsString(requestBody)))
+                        .content(objectMapper.writeValueAsString(requestBody))
+                .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isBadRequest())
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId))
                 .andExpect(jsonPath(CID, is(xCorrelationId)))
@@ -517,7 +556,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
-
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookPublisherWithinMinLength() throws Exception {
         final var title = "1";
@@ -538,6 +577,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -545,6 +585,7 @@ class BookControllerTest {
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookPublisherWithinMaxLength() throws Exception {
         final var title = "1";
@@ -567,11 +608,13 @@ class BookControllerTest {
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
-                        .content(objectMapper.writeValueAsString(requestBody)))
+                        .content(objectMapper.writeValueAsString(requestBody))
+                .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isCreated())
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookPublisherExceedsMaxLengthError() throws Exception {
         final var title = "1";
@@ -592,6 +635,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -602,6 +646,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookPublisherNullValue() throws Exception {
         final var title = "The Great Gatsby";
@@ -621,6 +666,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -631,7 +677,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
-
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookEditionWithinMaxLength() throws Exception {
         final var title = "1";
@@ -652,6 +698,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -659,6 +706,7 @@ class BookControllerTest {
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookEditionExceedsMaxLengthError() throws Exception {
         final var title = "1";
@@ -679,6 +727,7 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -689,6 +738,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookAbsenceOfNonMandatoryParams() throws Exception {
         final var title = "The Catcher in the Rye";
@@ -703,12 +753,14 @@ class BookControllerTest {
                 .build();
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + BOOKS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
                 .andExpect(status().isCreated());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookItemsSuccess() throws Exception {
         final var title = "The Great Gatsby";
@@ -729,12 +781,13 @@ class BookControllerTest {
 
         bookRepository.save(book);
 
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         final var requestBody = new BookItem()
                 .setBookId(bookId);
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + ITEMS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -745,7 +798,7 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.borrowedAt", is(nullValue())))
                 .andExpect(jsonPath("$.returnedAt", is(nullValue())));
 
-        final var bookItem = bookItemRepository.findAll().get(0);
+        final var bookItem = bookItemRepository.findAll().getFirst();
 
         assertNotNull(bookItem.getId());
         assertEquals(bookId, bookItem.getBookId());
@@ -757,6 +810,7 @@ class BookControllerTest {
         assertNull(bookItem.getDeletedAt());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookItemNameNullError() throws Exception {
 
@@ -766,6 +820,7 @@ class BookControllerTest {
                 .setBookId(null);
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + ITEMS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -776,6 +831,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookItemsBookIdNotExist() throws Exception {
         final var xCorrelationId = getUUID();
@@ -783,6 +839,7 @@ class BookControllerTest {
                 .setBookId(UUID.randomUUID());
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + ITEMS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -793,6 +850,7 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("Username already exists in Db")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void addBookItemsNullBookId() throws Exception {
         final var xCorrelationId = getUUID();
@@ -800,6 +858,7 @@ class BookControllerTest {
                 .setBookId(null);
 
         mvc.perform(MockMvcRequestBuilders.post(GLOBAL_BASE_URI + ITEMS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                         .contentType("application/json")
                         .content(objectMapper.writeValueAsString(requestBody)))
@@ -810,17 +869,9 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("mandatory param error")));
     }
 
-    //this
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrowInProgressSuccessfulUpdate() throws Exception {
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -830,34 +881,29 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=in_progress"))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=in_progress")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isAccepted());
 
-        final var bookItem = bookItemRepository.findAll().get(0);
+        final var bookItem = bookItemRepository.findAll().getFirst();
 
         assertEquals(bookItem.getStatus(), BookItemStatus.IN_PROGRESS);
         assertNotNull(bookItem.getBorrowedAt());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrowRemoveSuccessfulUpdate() throws Exception {
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -867,35 +913,30 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=removed"))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=removed")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isAccepted());
 
-        final var bookItem = bookItemRepository.findAll().get(0);
+        final var bookItem = bookItemRepository.findAll().getFirst();
 
         assertEquals(BookItemStatus.REMOVED, bookItem.getStatus());
         assertNotNull(bookItem.getBorrowedAt());
         assertNull(bookItem.getReturnedAt());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrowUpdateWrongBookItemId() throws Exception {
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -905,13 +946,16 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
         final var bookItemId = getUUID();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=in_progress"))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=in_progress")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isNotFound());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrowUpdateWrongUserId() throws Exception {
         final var xCorrelationId = getUUID();
@@ -925,15 +969,16 @@ class BookControllerTest {
                 .setPublicationYear(1925));
 
         final var userId = getUUID();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
         mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=in_progress")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId)
                 )
                 .andExpect(status().isBadRequest())
@@ -943,17 +988,10 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("Username already exists in Db")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrowUpdateWrongStatus() throws Exception {
         final var xCorrelationId = getUUID();
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -963,16 +1001,18 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
         mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=removal")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId))
                 .andExpect(status().isBadRequest())
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId))
@@ -981,17 +1021,10 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("wrong type format")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrowBookIdNullUpdate() throws Exception {
         final var xCorrelationId = getUUID();
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1001,14 +1034,16 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
         mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + null + "/borrowing?" + "userId=" + userId + "&status=in_progress")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId))
                 .andExpect(status().isBadRequest())
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId))
@@ -1017,17 +1052,10 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("wrong type format")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrowUserIdNullUpdate() throws Exception {
         final var xCorrelationId = getUUID();
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1037,15 +1065,16 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
         mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + null + "&status=in_progress")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
                         .header(CORRELATION_ID_HEADER_NAME, xCorrelationId))
                 .andExpect(status().isBadRequest())
                 .andExpect(header().string(CORRELATION_ID_HEADER_NAME, xCorrelationId))
@@ -1054,16 +1083,9 @@ class BookControllerTest {
                 .andExpect(jsonPath(ERROR_MSG, is("wrong type format")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemReturn() throws Exception {
-
-        final var user = userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1073,35 +1095,32 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var user = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().orElseThrow();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setUserId(user)
                 .setStatus(BookItemStatus.IN_PROGRESS));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
+                )
                 .andExpect(status().isAccepted());
 
-        final var bookItemAfterUpdate = bookItemRepository.findAll().get(0);
+        final var bookItemAfterUpdate = bookItemRepository.findAll().getFirst();
 
         assertEquals(BookItemStatus.AVAILABLE, bookItemAfterUpdate.getStatus());
     }
 
-    //add tests to check history for all the actions returned/ borrowed
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateActionBorrowAnyBookItemDbHistoryCheck() throws Exception {
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1111,14 +1130,17 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        final var response = mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId))
+        final var response = mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
+                )
                 .andExpect(status().isAccepted())
                 .andExpect(jsonPath("$.bookItemId", notNullValue()))
                 .andReturn()
@@ -1130,28 +1152,21 @@ class BookControllerTest {
         final var bookHistory = bookItemHistoryRepository.findAll();
 
         assertEquals(2, bookHistory.size());
-        assertNotNull(bookHistory.get(0).getId());
-        assertEquals(bookItemId, bookHistory.get(0).getItemId().toString());
-        assertNull(bookHistory.get(0).getUserId());
-        assertNotNull(bookHistory.get(0).getActionAt());
-        assertEquals(BookAction.ADDED, bookHistory.get(0).getActionType());
+        assertNotNull(bookHistory.getFirst().getId());
+        assertEquals(bookItemId, bookHistory.getFirst().getItemId().toString());
+        assertNull(bookHistory.getFirst().getUserId());
+        assertNotNull(bookHistory.getFirst().getActionAt());
+        assertEquals(BookAction.ADDED, bookHistory.getFirst().getActionType());
         assertNotNull(bookHistory.get(1).getId());
         assertEquals(bookItemId, bookHistory.get(1).getItemId().toString());
         assertEquals(userId, bookHistory.get(1).getUserId());
-        assertNotNull(bookHistory.get(0).getActionAt());
+        assertNotNull(bookHistory.getFirst().getActionAt());
         assertEquals(BookAction.BORROWED, bookHistory.get(1).getActionType());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemReturnDbHistoryCheck() throws Exception {
-
-        final var user = userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1161,45 +1176,42 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var user = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().orElseThrow();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setUserId(user)
                 .setStatus(BookItemStatus.IN_PROGRESS));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
+                )
                 .andExpect(status().isAccepted());
 
         final var bookHistory = bookItemHistoryRepository.findAll();
 
         assertEquals(2, bookHistory.size());
-        assertNotNull(bookHistory.get(0).getId());
-        assertEquals(bookItemId, bookHistory.get(0).getItemId());
-        assertNull(bookHistory.get(0).getUserId());
-        assertNotNull(bookHistory.get(0).getActionAt());
-        assertEquals(BookAction.ADDED, bookHistory.get(0).getActionType());
+        assertNotNull(bookHistory.getFirst().getId());
+        assertEquals(bookItemId, bookHistory.getFirst().getItemId());
+        assertNull(bookHistory.getFirst().getUserId());
+        assertNotNull(bookHistory.getFirst().getActionAt());
+        assertEquals(BookAction.ADDED, bookHistory.getFirst().getActionType());
         assertNotNull(bookHistory.get(1).getId());
         assertEquals(bookItemId, bookHistory.get(1).getItemId());
         assertEquals(userId, bookHistory.get(1).getUserId());
-        assertNotNull(bookHistory.get(0).getActionAt());
+        assertNotNull(bookHistory.getFirst().getActionAt());
         assertEquals(BookAction.RETURNED, bookHistory.get(1).getActionType());
     }
 
-
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemReturnWrongUserId() throws Exception {
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1210,28 +1222,23 @@ class BookControllerTest {
                 .setPublicationYear(1925));
 
         final var userId = getUUID();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.IN_PROGRESS));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))
+                )
                 .andExpect(status().isNotFound());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemReturnWrongBookId() throws Exception {
-
-        final var user = userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1241,8 +1248,11 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var user = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().orElseThrow();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
@@ -1251,7 +1261,8 @@ class BookControllerTest {
 
         final var bookItemId = getUUID();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/return?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isNotFound());
 
     }
@@ -1260,21 +1271,23 @@ class BookControllerTest {
     @Test
     void getAllAvailableBooksSeveralItems() throws Exception {
         final var book = bookRepository.findAll();
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
 
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        bookService.borrowActionBookItemById(bookItemRepository.findAll().get(0).getId(), userId, BookItemStatus.IN_PROGRESS);
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.IN_PROGRESS);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=available"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=available")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items.length()", is(2)));
     }
@@ -1283,15 +1296,17 @@ class BookControllerTest {
     @Test
     void getBookItemParamCheck() throws Exception {
         final var book = bookRepository.findAll();
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
 
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        bookService.borrowActionBookItemById(bookItemRepository.findAll().get(0).getId(), userId, BookItemStatus.AVAILABLE);
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.AVAILABLE);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=available"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=available")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items[0].bookItemId", notNullValue()))
                 .andExpect(jsonPath("$.items[0].bookItemId", not(hasLength(0))))
@@ -1304,21 +1319,23 @@ class BookControllerTest {
     @Test
     void getAllAvailableBooks() throws Exception {
         final var book = bookRepository.findAll();
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
 
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        bookService.borrowActionBookItemById(bookItemRepository.findAll().get(0).getId(), userId, BookItemStatus.IN_PROGRESS);
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.IN_PROGRESS);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=available"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=available")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items.length()", is(2)))
                 .andExpect(jsonPath("$.items.length()", is(2)))
@@ -1330,21 +1347,23 @@ class BookControllerTest {
     @Test
     void getAllRemovedBooks() throws Exception {
         final var book = bookRepository.findAll();
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
 
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        bookService.borrowActionBookItemById(bookItemRepository.findAll().get(0).getId(), userId, BookItemStatus.REMOVED);
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.REMOVED);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=removed"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=removed")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items.length()", is(1)));
     }
@@ -1353,21 +1372,23 @@ class BookControllerTest {
     @Test
     void getAllInProgressBooks() throws Exception {
         final var book = bookRepository.findAll();
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
 
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.IN_PROGRESS));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        bookService.borrowActionBookItemById(bookItemRepository.findAll().get(0).getId(), userId, BookItemStatus.IN_PROGRESS);
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.IN_PROGRESS);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=in_progress"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=in_progress")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items.length()", is(1)));
     }
@@ -1376,26 +1397,28 @@ class BookControllerTest {
     @Test
     void getAllAvailableByBookItemId() throws Exception {
         final var book = bookRepository.findAll();
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
 
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.IN_PROGRESS));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.IN_PROGRESS));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.REMOVED));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
-        bookService.borrowActionBookItemById(bookItemRepository.findAll().get(0).getId(), userId, BookItemStatus.IN_PROGRESS);
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.IN_PROGRESS);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookItemId=" + bookItemId + "&status=in_progress"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookItemId=" + bookItemId + "&status=in_progress")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items.length()", is(1)))
                 .andExpect(jsonPath("$.items[0].bookItemId", is(bookItemId.toString())));
@@ -1405,37 +1428,41 @@ class BookControllerTest {
     @Test
     void getAllAvailableSortByBookItemStatus() throws Exception {
         final var book = bookRepository.findAll();
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
 
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.IN_PROGRESS));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.IN_PROGRESS));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.AVAILABLE));
         bookItemRepository.save(new BookItem()
-                .setBookId(book.get(0).getId())
+                .setBookId(book.getFirst().getId())
                 .setStatus(BookItemStatus.REMOVED));
 
-        bookService.borrowActionBookItemById(bookItemRepository.findAll().get(0).getId(), userId, BookItemStatus.IN_PROGRESS);
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.IN_PROGRESS);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?sortBy=status"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?sortBy=status")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items.length()", is(4)));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllAvailableNoItemsNoFilters() throws Exception {
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items.length()", is(0)));
     }
 
-
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllBooksReturnedItems() throws Exception {
         final var title = "The Great Gatsby";
@@ -1453,16 +1480,18 @@ class BookControllerTest {
                 .setEdition(edition)
                 .setPublicationYear(publicationYear));
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items[0].bookId", not(hasLength(0))))
                 .andExpect(jsonPath("$.items[0].title", is(title)))
                 .andExpect(jsonPath("$.items[0].author", is(author)))
                 .andExpect(jsonPath("$.items[0].description", is(description)))
                 .andExpect(jsonPath("$.items[0].edition", is(edition)))
-                .andExpect(jsonPath("$.items[0].publicationyYear", is(publicationYear)));
+                .andExpect(jsonPath("$.items[0].publicationYear", is(publicationYear)));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllBooksSortByTitleDefaultOrderDesc() throws Exception {
 
@@ -1482,12 +1511,14 @@ class BookControllerTest {
                 .setEdition("1st")
                 .setPublicationYear(1813));
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all" + "?sortBy=title"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all" + "?sortBy=title")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items[1].title", is("Pride and Prejudice")))
                 .andExpect(jsonPath("$.items[0].title", is("The Great Gatsby")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllBooksSortByTitleCustomOrderAsc() throws Exception {
 
@@ -1507,12 +1538,14 @@ class BookControllerTest {
                 .setEdition("1st")
                 .setPublicationYear(1813));
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all" + "?sortBy=title&order=asc"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all" + "?sortBy=title&order=asc")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items[0].title", is("Pride and Prejudice")))
                 .andExpect(jsonPath("$.items[1].title", is("The Great Gatsby")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllBooksCustomOrderAsc() throws Exception {
 
@@ -1532,22 +1565,16 @@ class BookControllerTest {
                 .setEdition("1st")
                 .setPublicationYear(1813));
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all" + "?order=asc"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all" + "?order=asc")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.items[1].title", is("Pride and Prejudice")))
                 .andExpect(jsonPath("$.items[0].title", is("The Great Gatsby")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void borrowAnyBookItemSuccess() throws Exception {
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1557,8 +1584,9 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
@@ -1570,7 +1598,8 @@ class BookControllerTest {
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        final var response = mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId))
+        final var response = mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isAccepted())
                 .andExpect(jsonPath("$.bookItemId", notNullValue()))
                 .andReturn()
@@ -1584,16 +1613,12 @@ class BookControllerTest {
         assertNotNull(bookItem.getBorrowedAt());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void borrowAnyBookItemNotAvailable() throws Exception {
 
-        final var user = userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
+        final var user = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().orElseThrow();
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1603,8 +1628,9 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
@@ -1618,14 +1644,16 @@ class BookControllerTest {
 
         final var bookItems = bookItemRepository.findAll();
 
-        bookService.borrowActionBookItemById(bookItems.get(0).getId(), userId, BookItemStatus.IN_PROGRESS);
+        bookService.borrowActionBookItemById(bookItems.getFirst().getId(), userId, BookItemStatus.IN_PROGRESS);
         bookService.borrowActionBookItemById(bookItems.get(1).getId(), userId, BookItemStatus.IN_PROGRESS);
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andDo(print())
                 .andExpect(status().isNotFound());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void borrowAnyBookItemInvalidUser() throws Exception {
 
@@ -1638,34 +1666,30 @@ class BookControllerTest {
                 .setPublicationYear(1925));
 
         final var userId = Utils.getUUID();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isBadRequest());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void borrowAnyBookItemInvalidBookId() throws Exception {
 
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
-
-        final var userId = userRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().getFirst().getId();
         final var bookId = Utils.getUUID();
 
-        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId))
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookId + "/borrowingAny?" + "userId=" + userId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isNotFound());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getCountOfAvailableBookItems() throws Exception {
 
@@ -1677,7 +1701,7 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
@@ -1689,12 +1713,13 @@ class BookControllerTest {
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookId=" + bookId + "&status=available"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookId=" + bookId + "&status=available")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.total", is(3)));
     }
 
-
+    @Sql("classpath:sql/states.sql")
     @Test
     void getCountOfAvailableBookItemsNoAvailableItems() throws Exception {
 
@@ -1706,13 +1731,15 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookId=" + bookId + "&status=available"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookId=" + bookId + "&status=available")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.total", is(0)));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getCountOfAvailableBookItemsInvalidBookId() throws Exception {
 
@@ -1726,20 +1753,18 @@ class BookControllerTest {
 
         final var bookId = Utils.getUUID();
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookId=" + bookId + "&status=available"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?bookId=" + bookId + "&status=available")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.total", is(0)));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllBooksAndBookItems() throws Exception {
-        final var user = userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
+
+        final var user = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().orElseThrow();
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1757,7 +1782,7 @@ class BookControllerTest {
                 .setEdition("3rd Edition2")
                 .setPublicationYear(1930));
 
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         final var genre = genreRepository.save(new Genre().setName("Action"));
 
@@ -1778,7 +1803,8 @@ class BookControllerTest {
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all?order=asc"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all?order=asc")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.pageSize", is(10)))
@@ -1788,17 +1814,17 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.items[0].author", is("F. Scott Fitzgerald")))
                 .andExpect(jsonPath("$.items[0].description", is("A classic novel set in the Roaring Twenties that explores themes of wealth, love, and the American Dream.")))
                 .andExpect(jsonPath("$.items[0].edition", is("3rd Edition")))
-                .andExpect(jsonPath("$.items[0].publicationyYear", is(1925)))
+                .andExpect(jsonPath("$.items[0].publicationYear", is(1925)))
                 .andExpect(jsonPath("$.items[0].createdAt", notNullValue()))
                 .andExpect(jsonPath("$.items[0].deletedAt", nullValue()))
                 .andExpect(jsonPath("$.items[0].bookItems[0].bookItemId", notNullValue()))
                 .andExpect(jsonPath("$.items[0].bookItems[0].user.id", notNullValue()))
-                .andExpect(jsonPath("$.items[0].bookItems[0].user.username", is("Alelxo")))
-                .andExpect(jsonPath("$.items[0].bookItems[0].user.name", is("Alex")))
-                .andExpect(jsonPath("$.items[0].bookItems[0].user.surname", is("Bur")))
-                .andExpect(jsonPath("$.items[0].bookItems[0].user.email", is("efaf@gmail.com")))
-                .andExpect(jsonPath("$.items[0].bookItems[0].user.phoneNumber", is("380679920267")))
-                .andExpect(jsonPath("$.items[0].bookItems[0].user.address", is("assfasfd")))
+                .andExpect(jsonPath("$.items[0].bookItems[0].user.username", is("user_1")))
+                .andExpect(jsonPath("$.items[0].bookItems[0].user.name", is("Name_940")))
+                .andExpect(jsonPath("$.items[0].bookItems[0].user.surname", is("Surname_934")))
+                .andExpect(jsonPath("$.items[0].bookItems[0].user.email", is("user_1@example.com")))
+                .andExpect(jsonPath("$.items[0].bookItems[0].user.phoneNumber", is("555946646")))
+                .andExpect(jsonPath("$.items[0].bookItems[0].user.address", is("Street 688, City 90, State 49")))
                 .andExpect(jsonPath("$.items[0].bookItems[0].status", is("IN_PROGRESS")))
                 .andExpect(jsonPath("$.items[0].bookItems[0].borrowedAt", notNullValue()))
                 .andExpect(jsonPath("$.items[0].bookItems[0].returnedAt", nullValue()))
@@ -1812,22 +1838,19 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.items[1].author", is("F. Scott Fitzgerald2")))
                 .andExpect(jsonPath("$.items[1].description", is("A classic novel set in the Roaring Twenties that explores themes of wealth, love, and the American Dream.2")))
                 .andExpect(jsonPath("$.items[1].edition", is("3rd Edition2")))
-                .andExpect(jsonPath("$.items[1].publicationyYear", is(1930)))
+                .andExpect(jsonPath("$.items[1].publicationYear", is(1930)))
                 .andExpect(jsonPath("$.items[1].createdAt", notNullValue()))
                 .andExpect(jsonPath("$.items[1].deletedAt", nullValue()))
                 .andExpect(jsonPath("$.items[1].bookItems", is(hasSize(0))))
-                .andExpect(jsonPath("$.items[1].bookGenres", is(hasSize(0))));
+                .andExpect(jsonPath("$.items[1].bookGenres", is(hasSize(0))))
+                .andDo(print());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllBooksAnd100BookItems() throws Exception {
-        final var user = userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
+        final var user = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().orElseThrow();
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1837,7 +1860,7 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         final var genre = genreRepository.save(new Genre().setName("Action"));
 
@@ -1854,7 +1877,8 @@ class BookControllerTest {
                 LocalDateTime.now(),
                 100);
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all?order=asc"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all?order=asc")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.pageSize", is(10)))
@@ -1862,10 +1886,12 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.items[0].bookItems", hasSize(100)));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getAllBooksAndBookItemsEmptyResponse() throws Exception {
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all"))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/all")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.pageSize", is(10)))
@@ -1873,15 +1899,11 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.items", hasSize(0)));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getBookById() throws Exception {
-        final var user = userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
+        final var user = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().orElseThrow();
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1891,7 +1913,7 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         final var genre = genreRepository.save(new Genre().setName("Action"));
 
@@ -1912,7 +1934,8 @@ class BookControllerTest {
                 .setBookId(bookId)
                 .setStatus(BookItemStatus.AVAILABLE));
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/" + bookId))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/" + bookId)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.bookId", notNullValue()))
@@ -1920,18 +1943,18 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.author", is("F. Scott Fitzgerald")))
                 .andExpect(jsonPath("$.description", is("A classic novel set in the Roaring Twenties that explores themes of wealth, love, and the American Dream.")))
                 .andExpect(jsonPath("$.edition", is("3rd Edition")))
-                .andExpect(jsonPath("$.publicationyYear", is(1925)))
-                .andExpect(jsonPath("$.publicationyYear", notNullValue()))
+                .andExpect(jsonPath("$.publicationYear", is(1925)))
+                .andExpect(jsonPath("$.publicationYear", notNullValue()))
                 .andExpect(jsonPath("$.createdAt", notNullValue()))
                 .andExpect(jsonPath("$.deletedAt", nullValue()))
                 .andExpect(jsonPath("$.bookItems[0].bookItemId", notNullValue()))
                 .andExpect(jsonPath("$.bookItems[0].user.id", notNullValue()))
-                .andExpect(jsonPath("$.bookItems[0].user.username", is("Alelxo")))
-                .andExpect(jsonPath("$.bookItems[0].user.name", is("Alex")))
-                .andExpect(jsonPath("$.bookItems[0].user.surname", is("Bur")))
-                .andExpect(jsonPath("$.bookItems[0].user.email", is("efaf@gmail.com")))
-                .andExpect(jsonPath("$.bookItems[0].user.phoneNumber", is("380679920267")))
-                .andExpect(jsonPath("$.bookItems[0].user.address", is("assfasfd")))
+                .andExpect(jsonPath("$.bookItems[0].user.username", is("user_1")))
+                .andExpect(jsonPath("$.bookItems[0].user.name", is("Name_940")))
+                .andExpect(jsonPath("$.bookItems[0].user.surname", is("Surname_934")))
+                .andExpect(jsonPath("$.bookItems[0].user.email", is("user_1@example.com")))
+                .andExpect(jsonPath("$.bookItems[0].user.phoneNumber", is("555946646")))
+                .andExpect(jsonPath("$.bookItems[0].user.address", is("Street 688, City 90, State 49")))
                 .andExpect(jsonPath("$.bookItems[0].status", is("IN_PROGRESS")))
                 .andExpect(jsonPath("$.bookItems[0].borrowedAt", notNullValue()))
                 .andExpect(jsonPath("$.bookItems[0].returnedAt", nullValue()))
@@ -1942,24 +1965,19 @@ class BookControllerTest {
                 .andExpect(jsonPath("$.bookGenres[0].genreName", is("Action")));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void getBookByIdNotFound() throws Exception {
 
-        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/" + UUID.randomUUID()))
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + BOOKS + "/" + UUID.randomUUID())
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
                 .andDo(print())
                 .andExpect(status().isNotFound());
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void borrowAnyBookItem2ThreadsSuccess() {
-
-        userRepository.save(new User()
-                .setUsername("Alelxo")
-                .setName("Alex")
-                .setSurname("Bur")
-                .setEmail("efaf@gmail.com")
-                .setPhoneNumber("380679920267")
-                .setAddress("assfasfd"));
 
         bookRepository.save(new Book()
                 .setTitle("The Great Gatsby")
@@ -1969,8 +1987,9 @@ class BookControllerTest {
                 .setEdition("3rd Edition")
                 .setPublicationYear(1925));
 
-        final var userId = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         final var bookItemIdOne = bookItemRepository.save(new BookItem()
                 .setBookId(bookId)
@@ -1996,48 +2015,111 @@ class BookControllerTest {
         Collections.sort(statusCodes);
 
         assertEquals(2,statusCodes.size());
-        assertEquals(202,statusCodes.get(0));
+        assertEquals(202,statusCodes.getFirst());
         assertEquals(500,statusCodes.get(1));
     }
 
+    @Sql("classpath:sql/states.sql")
     @Test
     void updateBookItemBorrow2ThreadsSuccess() throws Exception {
 
-        userRepository.save(new User().setUsername("Alelxo").setName("Alex").setSurname("Bur").setEmail("efaf@gmail.com").setPhoneNumber("380679920267").setAddress("assfasfd"));
-
-        userRepository.save(new User().setUsername("Buton").setName("Maron").setSurname("Bur").setEmail("efaf@gmail.com").setPhoneNumber("380679920267").setAddress("assfasfd"));
-
         bookRepository.save(new Book().setTitle("The Great Gatsby").setAuthor("F. Scott Fitzgerald").setDescription("A classic novel set in the Roaring Twenties that explores themes of wealth, love, and the American Dream.").setPublisher("Scribner").setEdition("3rd Edition").setPublicationYear(1925));
 
-        final var userIdOne = userRepository.findAll().get(0).getId();
-        final var bookId = bookRepository.findAll().get(0).getId();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
 
         bookItemRepository.save(new BookItem().setBookId(bookId).setStatus(BookItemStatus.AVAILABLE));
 
-        final var bookItemId = bookItemRepository.findAll().get(0).getId();
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
 
-        var listOfTreads = getCallables(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userIdOne + "&status=in_progress", 3);
+        var listOfTreads = getCallables(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=in_progress", 3);
 
         var statusCodes = threadRunner(2, listOfTreads);
 
         Collections.sort(statusCodes);
 
         assertEquals(3, statusCodes.size());
-        assertEquals(202, statusCodes.get(0));
+        assertEquals(202, statusCodes.getFirst());
         assertEquals(404, statusCodes.get(1));
-
     }
 
     private List<Callable<Integer>> getCallables(String url, int count) {
         List<Callable<Integer>> listOfThreads = new ArrayList<>();
         for (int x = 0; x < count; x++) {
             listOfThreads.add(() -> {
-                var response = mvc.perform(MockMvcRequestBuilders.patch(url)).andReturn().getResponse();
+                var response = mvc.perform(MockMvcRequestBuilders.patch(url)
+                        .with(httpBasic("user_1", PASSWORD_ADMIN))).andReturn().getResponse();
 
                 return response.getStatus();
             });
         }
 
         return listOfThreads;
+    }
+
+    @Sql("classpath:sql/data.sql")
+    @Test
+    void userWithUerRoleTypeHasPermissionToRetrieveBooks() throws Exception {
+        final var book = bookRepository.findAll();
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername))
+                .findFirst().map(User::getId).orElseThrow();
+
+        bookItemRepository.save(new BookItem()
+                .setBookId(book.getFirst().getId())
+                .setStatus(BookItemStatus.AVAILABLE));
+
+        bookService.borrowActionBookItemById(bookItemRepository.findAll().getFirst().getId(), userId, BookItemStatus.AVAILABLE);
+
+        mvc.perform(MockMvcRequestBuilders.get(GLOBAL_BASE_URI + ITEMS + "?status=available")
+                        .with(httpBasic("user_1", PASSWORD_ADMIN)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.items[0].bookItemId", notNullValue()))
+                .andExpect(jsonPath("$.items[0].bookItemId", not(hasLength(0))))
+                .andExpect(jsonPath("$.items[0].user", is(nullValue())))
+                .andExpect(jsonPath("$.items[0].borrowedAt", notNullValue()))
+                .andExpect(jsonPath("$.items[0].returnedAt", is(nullValue())));
+    }
+
+    @Sql("classpath:sql/states.sql")
+    @Test
+    void roleTypeIsUserUpdateBookItemForbidden() throws Exception {
+
+        bookRepository.save(new Book().setTitle("The Great Gatsby").setAuthor("F. Scott Fitzgerald").setDescription("A classic novel set in the Roaring Twenties that explores themes of wealth, love, and the American Dream.").setPublisher("Scribner").setEdition("3rd Edition").setPublicationYear(1925));
+
+        final var userId = userRepository.findAll().stream().sorted(Comparator.comparing(User::getUsername)).findFirst().map(User::getId).orElseThrow();
+        final var bookId = bookRepository.findAll().getFirst().getId();
+
+        bookItemRepository.save(new BookItem().setBookId(bookId).setStatus(BookItemStatus.AVAILABLE));
+
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
+
+        mvc.perform(MockMvcRequestBuilders.patch(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId + "/borrowing?" + "userId=" + userId + "&status=in_progress").with(httpBasic("user_2", PASSWORD_USER))).andExpect(status().isForbidden());
+    }
+
+    @Sql("classpath:sql/states.sql")
+    @Test
+    void roleTypeIsUserDeleteBookItemForbidden() throws Exception {
+
+        bookRepository.save(new Book().setTitle("The Great Gatsby").setAuthor("F. Scott Fitzgerald").setDescription("A classic novel set in the Roaring Twenties that explores themes of wealth, love, and the American Dream.").setPublisher("Scribner").setEdition("3rd Edition").setPublicationYear(1925));
+
+        final var bookId = bookRepository.findAll().getFirst().getId();
+
+        bookItemRepository.save(new BookItem().setBookId(bookId).setStatus(BookItemStatus.AVAILABLE));
+
+        final var bookItemId = bookItemRepository.findAll().getFirst().getId();
+        bookItemHistoryRepository.deleteAll();
+        mvc.perform(MockMvcRequestBuilders.delete(GLOBAL_BASE_URI + ITEMS + "/" + bookItemId).with(httpBasic("user_2", PASSWORD_USER))).andExpect(status().isForbidden());
+    }
+
+    @Sql("classpath:sql/states.sql")
+    @Test
+    void roleTypeIsUserDeleteBookForbidden() throws Exception {
+
+        bookRepository.save(new Book().setTitle("The Great Gatsby").setAuthor("F. Scott Fitzgerald").setDescription("A classic novel set in the Roaring Twenties that explores themes of wealth, love, and the American Dream.").setPublisher("Scribner").setEdition("3rd Edition").setPublicationYear(1925));
+
+        final var bookId = bookRepository.findAll().getFirst().getId();
+
+        mvc.perform(MockMvcRequestBuilders.delete(GLOBAL_BASE_URI + ITEMS + "/" + bookId).with(httpBasic("user_2", PASSWORD_USER))).andDo(print()).andExpect(status().isForbidden());
     }
 }
